prevented overflow of data

--- a/myApp/src/app/app.component.css
+++ b/myApp/src/app/app.component.css
@@ -143,9 +143,10 @@ html{
 }
 .currentHoldings{
 background-color: #c1cbd7;
-min-height: 400px;
+height: 400px;
 border-radius: 25px;
 box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
+overflow: scroll;
 }
 .holdingsTable{
     border: 1px solid rgb(0, 0, 0);
@@ -154,9 +155,10 @@ box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
 .orderHistory{
     background-color: #c1cbd7;
     border-radius: 25px;
-    min-height: 400px;
+    height: 400px;
     margin-top: 50px;
     box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
+    overflow: scroll;
 }
 
 .orderQueue{
@@ -165,13 +167,16 @@ box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
     margin-top: 50px;
     min-height: 250px;
     box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
+    overflow: scroll;
 }
 .searchTicker{
     background-color: #8696a7;
     margin-top: 50px;
-    min-height: 200px;
+    margin-bottom: 0px;
+    height: 300px;
     border-radius: 25px;
     box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
+    overflow: scroll;
 }
 .graph{
     background-color: #c1cbd7;
